--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
 tasks:
-  - before: cd /home/gitpod/.nvm/versions/node/*/lib/node_modules/node-red/ && npm link /workspace/shuttle-red/ && cd /workspace/shuttle-red/ && npm link
+  - before: cd /home/gitpod/.nvm/versions/node/*/lib/node_modules/node-red/ && npm link /workspace/shuttle-red/ && cd /workspace/shuttle-red/ && npm link && npm update -g svelte-integration-red
 image:
   file: .gitpod.Dockerfile
